--- a/src/components/Linkedin/style.css
+++ b/src/components/Linkedin/style.css
@@ -1,6 +1,4 @@
-/* .bottomicons {
-    visibility: hidden;
-  } */
+
 
   .linkedin {
     
