--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -2,7 +2,7 @@ nav {
     height: 100px;
     margin-bottom: 70px;
    background-color: rgba(1,74,107, 0.8);
-   width: 100%;
+   width: 100vw;
 }
 
 
